# flight-dynamics-sim

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
control/: pitch_damper.py  roll_damper.py  yaw_damper.py
flightgear_interface/: debug_joystick_axes.py  joystick_input.py  runfg.bat  stream_to_flightgear.py
governing_equations/: euler_integration.py  rk4_integration.py
model/: nonlinear_6DOF_aircraft_model.py  simplified_nonlinear_6dof_model.py  test_trim.py  trim_analysis.py
model/config/: f16_params.yaml  general_aircraft_parameters.yaml
simulation/: live_plot.py  main.py  simulate_open_loop.py  simulate_roll_control.py  simulate_roll_damper.py  simulate_yaw_damper.py
test_build/: test_import.py
trim_and_linearization/: linearization.py  test_linearization.py  trim_analysis.py
