[build-system]

requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flight_dynamics_simulation"
version = "0.1.0"
description = "A modular and extensible flight dynamics simulator for fixed-wing aircraft, featuring a full nonlinear 6-DOF state-space model."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sharath Hegde", email = "sharath.hegde@tum.de" }
]
requires-python = ">=3.7"

dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "construct==2.10.70",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "dill==0.3.9",
    "flightgear_python==2.0.2",
    "fonttools==4.56.0",
    "idna==3.10",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "multiprocess==0.70.17",
    "numpy==2.2.4",
    "packaging==24.2",
    "pillow==11.1.0",
    "pygame==2.6.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "scipy==1.15.2",
    "six==1.17.0",
    "urllib3==2.4.0"
]

[tool.setuptools]
packages = ["model", "control", "simulation", "governing_equations", "flightgear_interface", "trim_and_linearization"]

[project.urls]
Repository = "https://github.com/ss-hegde/flight-dynamics-sim"